// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`upload SAS program using restaflib 1`] = `
Object {
  "_ctb": true,
  "attributes": Object {
    "Action": Object {
      "type": "string",
      "value": "fetch",
    },
    "Actionset": Object {
      "type": "string",
      "value": "table",
    },
    "CreateTime": Object {
      "type": "double",
      "value": 0,
    },
  },
  "label": "Selected Rows from Table TESTJEST",
  "name": "Fetch",
  "rows": Array [
    Array [
      1,
      "testjest",
      "    length _WARN_ $4;   label _WARN_ = 'Warnings';   label _CLUSTER_ID_ = 'Cluster ID';   label _DISTANCE_ = 'Distance to Centroid';   _i_ = 0;   _j_ = 0;   _k_ = 0;   _l_ = 0;   _dist_ = 0;   _minDist_ = 0;   _found_ = 0;   _unknown_ = 0;   _unknownflag_ = 0;   _intMindist2cntr_ = 0;   _missingflag4Int_ = 0;   _numberOfIntVars_ = 4;   _minDistInt_ = 0;   label _STANDARDIZED_DISTANCE_ = 'Standardized Distance to Centroid';   drop _i_;   drop _j_;   drop _k_;   drop _l_;   drop _dist_;   drop _minDist_;   drop _minDistInt_;   drop _unknown_;   drop _unknownflag_;   drop _found_;   drop _intMindist2cntr_;   drop _missingflag4Int_;   drop _numberOfIntVars_;   drop _minDistInt_;   array _intVals_67{4} _temporary_;   array _intStdVals_67{4} _temporary_;   array _intVars_67[4] _temporary_;   _intVars_67[1] =   SDOH_PMU;   _intVars_67[2] =   SDOH_Per_Adults_Bachelors;   _intVars_67[3] =   SDOH_Unemployment_Rate;   _intVars_67[4] =   SDOH_Median_Household_Income;   array _cntrcoordsInt_67{4,4} _temporary_ (   5.6752109618776   34.574068577069   5.5249572649573   65162.262238794   6.1728412355737   28.076500921419   8.4815044247788   50250.811599193   5.5563377592335    27.69585347275    3.586724137931   55456.199169472   7.1425816544567   23.193113163492   5.9483653846154   45013.481439879   );   array _stdcntrcoordsInt_67 {4,4} _temporary_ (   -0.545947986801   1.2465170251288   -0.140043320021   1.2424484776721    0.080847377302    -0.09555849286   1.0754374093924   -0.456774851619   -0.695675960102    -0.17418139437   -0.936879929639   0.1364012391051   1.3022939633885   -1.104224427884   0.0340260867236   -1.053590936451   );   array _stdscaleInt_67 {4} _temporary_ (   0.7939278147152   4.8414322208822   2.4324097357342   8775.4507500947   );   array _stdcenterInt_67 {4} _temporary_ (   6.1086542539869   28.539140887732            5.8656   54259.216813453   );   *************** check missing interval value ******************;   _missingflag4Int_ = 0;   do _i_ = 1 to _numberOfIntVars_ until(_missingflag4Int_);      if missing( _intVars_67[_i_] ) then         _missingflag4Int_ = 1;   end;   if (_missingflag4Int_ = 1) then      substr(_WARN_, 1, 1) = 'M';   ********** prepare interval variable values *********;   do _i_ = 1 to _numberOfIntVars_;      if missing (_intVars_67[_i_] ) then do;         _intVals_67[_i_] = .;         _intStdVals_67[_i_] = .;      end; else do;         if missing (_stdscaleInt_67[_i_] ) then do;            _intStdVals_67[_i_] = ( _intVars_67[_i_] -  _stdcenterInt_67[_i_]);         end; else do;            _intStdVals_67[_i_] = ( _intVars_67[_i_] -  _stdcenterInt_67[_i_])                  /  _stdscaleInt_67[_i_];         end;         _intVals_67[_i_] = _intVars_67[_i_];      end;   end;   ****************** find the closest cluster ******************;   if _missingflag4Int_ > 0  then   do;      _CLUSTER_ID_ = .;      _DISTANCE_ = .;      _minDistInt_ = .;      _STANDARDIZED_DISTANCE_ = .;   end;   else   do;      _CLUSTER_ID_ = .;      _minDist_ = 8.988465674E307;      do _i_=1 to               4;         _intMindist2cntr_ = 0;         do _j_=1 to               4;            _dist_ = _intStdVals_67{_j_} - _stdcntrcoordsInt_67{_i_,_j_};            _dist_ = _dist_ ** 2;            _intMindist2cntr_ = _intMindist2cntr_ + _dist_;         end;         _intMindist2cntr_ = _intMindist2cntr_ **              0.5;         if( _minDist_  > _intMindist2cntr_) then do;            _CLUSTER_ID_ = _i_;            _minDist_ = _intMindist2cntr_;         end;         _STANDARDIZED_DISTANCE_ = _minDist_;      end;      _DISTANCE_ = 8.988465674E307;      _i_ = _CLUSTER_ID_;      _intMindist2cntr_ = 0;      do _j_=1 to               4;         _dist_ = _intVals_67{_j_} - _cntrcoordsInt_67{_i_,_j_};         _dist_ = _dist_ ** 2;         _intMindist2cntr_ = _intMindist2cntr_ + _dist_;      end;      _intMindist2cntr_ = _intMindist2cntr_ **              0.5;      _DISTANCE_ = _intMindist2cntr_;   end;if (MISSING('_CLUSTER_ID_'n))then _CLUSTER_ID_ = -1;   /*------------------------------------------*/   drop '_CLUSTER_ID_'n '_DISTANCE_'n '_WARN_'n '_STANDARDIZED_DISTANCE_'n;      '_CLUSTER_ID__67'n='_CLUSTER_ID_'n;'_DISTANCE__67'n='_DISTANCE_'n;'_WARN__67'n='_WARN_'n;'_STANDARDIZED_DISTANCE__67'n='_STANDARDIZED_DISTANCE_'n;   /*------------------------------------------*/   run;",
    ],
  ],
  "schema": Array [
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "_Index_",
      "type": "int",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "modelName",
      "type": "string",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "dataStepSrc",
      "type": "string",
      "width": 4351,
    },
  ],
  "title": "Selected Rows from Table TESTJEST",
}
`;

exports[`upload a CSV using restaflib 1`] = `
Object {
  "_ctb": true,
  "attributes": Object {
    "Action": Object {
      "type": "string",
      "value": "fetch",
    },
    "Actionset": Object {
      "type": "string",
      "value": "table",
    },
    "CreateTime": Object {
      "type": "double",
      "value": 0,
    },
  },
  "label": "Selected Rows from Table CARSJEST",
  "name": "Fetch",
  "rows": Array [
    Array [
      1,
      "Acura",
      "MDX",
      "SUV",
      "Asia",
      "All",
      36945,
      33337,
      3.5,
      6,
      265,
      17,
      23,
      4451,
      106,
      189,
    ],
    Array [
      2,
      "Acura",
      "RSX Type S 2dr",
      "Sedan",
      "Asia",
      "Front",
      23820,
      21761,
      2,
      4,
      200,
      24,
      31,
      2778,
      101,
      172,
    ],
    Array [
      3,
      "Acura",
      "TSX 4dr",
      "Sedan",
      "Asia",
      "Front",
      26990,
      24647,
      2.4,
      4,
      200,
      22,
      29,
      3230,
      105,
      183,
    ],
    Array [
      4,
      "Acura",
      "TL 4dr",
      "Sedan",
      "Asia",
      "Front",
      33195,
      30299,
      3.2,
      6,
      270,
      20,
      28,
      3575,
      108,
      186,
    ],
    Array [
      5,
      "Acura",
      "3.5 RL 4dr",
      "Sedan",
      "Asia",
      "Front",
      43755,
      39014,
      3.5,
      6,
      225,
      18,
      24,
      3880,
      115,
      197,
    ],
    Array [
      6,
      "Acura",
      "3.5 RL w/Navigation 4dr",
      "Sedan",
      "Asia",
      "Front",
      46100,
      41100,
      3.5,
      6,
      225,
      18,
      24,
      3893,
      115,
      197,
    ],
    Array [
      7,
      "Acura",
      "NSX coupe 2dr manual S",
      "Sports",
      "Asia",
      "Rear",
      89765,
      79978,
      3.2,
      6,
      290,
      17,
      24,
      3153,
      100,
      174,
    ],
    Array [
      8,
      "Audi",
      "A4 1.8T 4dr",
      "Sedan",
      "Europe",
      "Front",
      25940,
      23508,
      1.8,
      4,
      170,
      22,
      31,
      3252,
      104,
      179,
    ],
    Array [
      9,
      "Audi",
      "A41.8T convertible 2dr",
      "Sedan",
      "Europe",
      "Front",
      35940,
      32506,
      1.8,
      4,
      170,
      23,
      30,
      3638,
      105,
      180,
    ],
    Array [
      10,
      "Audi",
      "A4 3.0 4dr",
      "Sedan",
      "Europe",
      "Front",
      31840,
      28846,
      3,
      6,
      220,
      20,
      28,
      3462,
      104,
      179,
    ],
    Array [
      11,
      "Audi",
      "A4 3.0 Quattro 4dr manual",
      "Sedan",
      "Europe",
      "All",
      33430,
      30366,
      3,
      6,
      220,
      17,
      26,
      3583,
      104,
      179,
    ],
    Array [
      12,
      "Audi",
      "A4 3.0 Quattro 4dr auto",
      "Sedan",
      "Europe",
      "All",
      34480,
      31388,
      3,
      6,
      220,
      18,
      25,
      3627,
      104,
      179,
    ],
    Array [
      13,
      "Audi",
      "A6 3.0 4dr",
      "Sedan",
      "Europe",
      "Front",
      36640,
      33129,
      3,
      6,
      220,
      20,
      27,
      3561,
      109,
      192,
    ],
    Array [
      14,
      "Volkswagen",
      "Passat GLX V6 4MOTION 4dr",
      "Sedan",
      "Europe",
      "Front",
      33180,
      30583,
      2.8,
      6,
      190,
      19,
      26,
      3721,
      106,
      185,
    ],
    Array [
      15,
      "Audi",
      "A6 3.0 Quattro 4dr",
      "Sedan",
      "Europe",
      "All",
      39640,
      35992,
      3,
      6,
      220,
      18,
      25,
      3880,
      109,
      192,
    ],
    Array [
      16,
      "Audi",
      "A4 3.0 convertible 2dr",
      "Sedan",
      "Europe",
      "Front",
      42490,
      38325,
      3,
      6,
      220,
      20,
      27,
      3814,
      105,
      180,
    ],
    Array [
      17,
      "Audi",
      "A4 3.0 Quattro convertible 2dr",
      "Sedan",
      "Europe",
      "All",
      44240,
      40075,
      3,
      6,
      220,
      18,
      25,
      4013,
      105,
      180,
    ],
    Array [
      18,
      "Audi",
      "A6 2.7 Turbo Quattro 4dr",
      "Sedan",
      "Europe",
      "All",
      42840,
      38840,
      2.7,
      6,
      250,
      18,
      25,
      3836,
      109,
      192,
    ],
    Array [
      19,
      "Audi",
      "A6 4.2 Quattro 4dr",
      "Sedan",
      "Europe",
      "All",
      49690,
      44936,
      4.2,
      8,
      300,
      17,
      24,
      4024,
      109,
      193,
    ],
    Array [
      20,
      "Audi",
      "A8 L Quattro 4dr",
      "Sedan",
      "Europe",
      "All",
      69190,
      64740,
      4.2,
      8,
      330,
      17,
      24,
      4399,
      121,
      204,
    ],
  ],
  "schema": Array [
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "_Index_",
      "type": "int",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Make",
      "type": "string",
      "width": 10,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Model",
      "type": "string",
      "width": 30,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Type",
      "type": "string",
      "width": 6,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Origin",
      "type": "string",
      "width": 6,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "DriveTrain",
      "type": "string",
      "width": 5,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "MSRP",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Invoice",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "EngineSize",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Cylinders",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Horsepower",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "MPG_City",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "MPG_Highway",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Weight",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Wheelbase",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Length",
      "type": "double",
      "width": 8,
    },
  ],
  "title": "Selected Rows from Table CARSJEST",
}
`;

exports[`upload a CSV using restaflib+altsrc 1`] = `
Object {
  "_ctb": true,
  "attributes": Object {
    "Action": Object {
      "type": "string",
      "value": "fetch",
    },
    "Actionset": Object {
      "type": "string",
      "value": "table",
    },
    "CreateTime": Object {
      "type": "double",
      "value": 0,
    },
  },
  "label": "Selected Rows from Table CARSNEW1",
  "name": "Fetch",
  "rows": Array [
    Array [
      1,
      "Acura",
      "MDX",
      "SUV",
      "Asia",
      "All",
      36945,
      33337,
      3.5,
      6,
      265,
      17,
      23,
      4451,
      106,
      189,
    ],
    Array [
      2,
      "Acura",
      "RSX Type S 2dr",
      "Sedan",
      "Asia",
      "Front",
      23820,
      21761,
      2,
      4,
      200,
      24,
      31,
      2778,
      101,
      172,
    ],
    Array [
      3,
      "Acura",
      "TSX 4dr",
      "Sedan",
      "Asia",
      "Front",
      26990,
      24647,
      2.4,
      4,
      200,
      22,
      29,
      3230,
      105,
      183,
    ],
    Array [
      4,
      "Acura",
      "TL 4dr",
      "Sedan",
      "Asia",
      "Front",
      33195,
      30299,
      3.2,
      6,
      270,
      20,
      28,
      3575,
      108,
      186,
    ],
    Array [
      5,
      "Acura",
      "3.5 RL 4dr",
      "Sedan",
      "Asia",
      "Front",
      43755,
      39014,
      3.5,
      6,
      225,
      18,
      24,
      3880,
      115,
      197,
    ],
    Array [
      6,
      "Acura",
      "3.5 RL w/Navigation 4dr",
      "Sedan",
      "Asia",
      "Front",
      46100,
      41100,
      3.5,
      6,
      225,
      18,
      24,
      3893,
      115,
      197,
    ],
    Array [
      7,
      "Acura",
      "NSX coupe 2dr manual S",
      "Sports",
      "Asia",
      "Rear",
      89765,
      79978,
      3.2,
      6,
      290,
      17,
      24,
      3153,
      100,
      174,
    ],
    Array [
      8,
      "Audi",
      "A4 1.8T 4dr",
      "Sedan",
      "Europe",
      "Front",
      25940,
      23508,
      1.8,
      4,
      170,
      22,
      31,
      3252,
      104,
      179,
    ],
    Array [
      9,
      "Audi",
      "A41.8T convertible 2dr",
      "Sedan",
      "Europe",
      "Front",
      35940,
      32506,
      1.8,
      4,
      170,
      23,
      30,
      3638,
      105,
      180,
    ],
    Array [
      10,
      "Audi",
      "A4 3.0 4dr",
      "Sedan",
      "Europe",
      "Front",
      31840,
      28846,
      3,
      6,
      220,
      20,
      28,
      3462,
      104,
      179,
    ],
    Array [
      11,
      "Audi",
      "A4 3.0 Quattro 4dr manual",
      "Sedan",
      "Europe",
      "All",
      33430,
      30366,
      3,
      6,
      220,
      17,
      26,
      3583,
      104,
      179,
    ],
    Array [
      12,
      "Audi",
      "A4 3.0 Quattro 4dr auto",
      "Sedan",
      "Europe",
      "All",
      34480,
      31388,
      3,
      6,
      220,
      18,
      25,
      3627,
      104,
      179,
    ],
    Array [
      13,
      "Audi",
      "A6 3.0 4dr",
      "Sedan",
      "Europe",
      "Front",
      36640,
      33129,
      3,
      6,
      220,
      20,
      27,
      3561,
      109,
      192,
    ],
    Array [
      14,
      "Audi",
      "A6 3.0 Quattro 4dr",
      "Sedan",
      "Europe",
      "All",
      39640,
      35992,
      3,
      6,
      220,
      18,
      25,
      3880,
      109,
      192,
    ],
    Array [
      15,
      "Audi",
      "A4 3.0 convertible 2dr",
      "Sedan",
      "Europe",
      "Front",
      42490,
      38325,
      3,
      6,
      220,
      20,
      27,
      3814,
      105,
      180,
    ],
    Array [
      16,
      "Audi",
      "A4 3.0 Quattro convertible 2dr",
      "Sedan",
      "Europe",
      "All",
      44240,
      40075,
      3,
      6,
      220,
      18,
      25,
      4013,
      105,
      180,
    ],
    Array [
      17,
      "Audi",
      "A6 2.7 Turbo Quattro 4dr",
      "Sedan",
      "Europe",
      "All",
      42840,
      38840,
      2.7,
      6,
      250,
      18,
      25,
      3836,
      109,
      192,
    ],
    Array [
      18,
      "Audi",
      "A6 4.2 Quattro 4dr",
      "Sedan",
      "Europe",
      "All",
      49690,
      44936,
      4.2,
      8,
      300,
      17,
      24,
      4024,
      109,
      193,
    ],
    Array [
      19,
      "Audi",
      "A8 L Quattro 4dr",
      "Sedan",
      "Europe",
      "All",
      69190,
      64740,
      4.2,
      8,
      330,
      17,
      24,
      4399,
      121,
      204,
    ],
    Array [
      20,
      "Audi",
      "S4 Quattro 4dr",
      "Sedan",
      "Europe",
      "All",
      48040,
      43556,
      4.2,
      8,
      340,
      14,
      20,
      3825,
      104,
      179,
    ],
  ],
  "schema": Array [
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "_Index_",
      "type": "int",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Make",
      "type": "string",
      "width": 5,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Model",
      "type": "string",
      "width": 30,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Type",
      "type": "string",
      "width": 6,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Origin",
      "type": "string",
      "width": 6,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "DriveTrain",
      "type": "string",
      "width": 5,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "MSRP",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Invoice",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "EngineSize",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Cylinders",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Horsepower",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "MPG_City",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "MPG_Highway",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Weight",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Wheelbase",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Length",
      "type": "double",
      "width": 8,
    },
  ],
  "title": "Selected Rows from Table CARSNEW1",
}
`;

exports[`upload a bdat using restaflib 1`] = `
Object {
  "_ctb": true,
  "attributes": Object {
    "Action": Object {
      "type": "string",
      "value": "fetch",
    },
    "Actionset": Object {
      "type": "string",
      "value": "table",
    },
    "CreateTime": Object {
      "type": "double",
      "value": 0,
    },
  },
  "label": "Selected Rows from Table CLUSTER_TEST2JEST",
  "name": "Fetch",
  "rows": Array [
    Array [
      1,
      "13045",
      2013,
      1084.59,
      19403,
      17.9,
      45493,
      20.1913806167431,
      17.5034700777731,
      8.08284858149494,
      9018.03,
      1,
      121.46,
      0.1743,
      53.84,
      0.3071,
      9283.86,
      9796.18,
      109533030.61,
      112761788.9,
      118984413.3,
      1406,
      51854,
      257,
      963,
      46866,
      3727,
      169,
      4.1,
      443,
      426,
      863,
      112276,
      4.3,
      30131,
      -6,
      4988,
      9.6,
      746.93021337,
      21170,
      5562,
      48.942949122,
      2.3,
      1.5,
      4,
      3.8,
      12.6,
      8.6,
      14068,
      24779,
      12518,
      4642,
      9.85,
      47105,
      6.98,
      674954,
      174,
      295,
      28.4,
      19.6,
      34.5,
      17.4,
      4158,
      9.99,
      41628,
      7.66,
      543130,
      146,
      233,
      20384,
      484,
      8.84,
      5477,
      4.15,
      131824,
      28,
      62,
      1,
      0,
      3,
      9558.0188626015,
      "",
      1.26222187811499,
    ],
    Array [
      2,
      "13045",
      2014,
      1090.51,
      24983,
      22.9,
      43442,
      20.5081613187212,
      18.0690644647436,
      8.29657245611129,
      8910.68,
      1.03,
      121.99,
      0.1815,
      57.84,
      0.32159999999999,
      9091.58,
      9525.94,
      108701412.46,
      110908157.54,
      116206932.01,
      1442,
      51802,
      1101,
      985,
      47579,
      4655,
      84,
      4.1,
      457,
      1185,
      1666,
      113942,
      4.3,
      29908,
      24,
      4223,
      8.2,
      572.91881782,
      21503,
      5072,
      51.47117828,
      9.7,
      0.7,
      4,
      10.5,
      12.7,
      8.7,
      14068,
      24779,
      12518,
      4474,
      9.7,
      46111,
      6.35,
      725997,
      170,
      306,
      28.4,
      19.6,
      34.5,
      17.4,
      3966,
      9.75,
      40682,
      6.9,
      589403,
      144,
      247,
      20384,
      508,
      9.36,
      5429,
      3.97,
      136594,
      26,
      59,
      0,
      0,
      4,
      508.921237838606,
      "",
      0.96751677927775,
    ],
    Array [
      3,
      "13045",
      2015,
      1102.45,
      22544,
      20.4,
      45453,
      21.5439817001353,
      18.6346588517141,
      8.51029633072765,
      9360.62,
      1,
      121.92,
      0.1765,
      63.65,
      0.343,
      9652.05,
      10647.85,
      114124644.15,
      117677806.58,
      129818578.1,
      1466,
      51647,
      32,
      1075,
      48177,
      4085,
      116,
      4.1,
      391,
      148,
      525,
      114467,
      4.3,
      29184,
      -14,
      3470,
      6.7,
      430.93407873,
      20952,
      5007,
      49.311266447,
      0.3,
      1,
      3.4,
      1.3,
      12.8,
      9.4,
      14068,
      24779,
      12518,
      4075,
      9.49,
      42921,
      5.89,
      729285,
      169,
      315,
      28.4,
      19.6,
      34.5,
      17.4,
      3838,
      9.81,
      39127,
      6.48,
      603400,
      144,
      255,
      20384,
      237,
      6.25,
      3794,
      3.01,
      125885,
      25,
      60,
      0,
      0,
      4,
      2519.91177408666,
      "",
      0.45522871346966,
    ],
    Array [
      4,
      "13045",
      2016,
      1119.24,
      16713,
      14.9,
      50598,
      22.2424203210274,
      19.2002532386846,
      8.724020205344,
      9094.48,
      1.01,
      120.81,
      0.1879,
      69.12,
      0.3639,
      9419.44,
      10207.34,
      109870442.68,
      113796252.63,
      123314908.93,
      1498,
      53541,
      975,
      993,
      50337,
      3916,
      177,
      4,
      505,
      1152,
      1656,
      116123,
      4.1,
      29044,
      -1,
      3204,
      6,
      430.93407873,
      19310,
      4256,
      49.19432585,
      8.5,
      1.5,
      4.4,
      10,
      13,
      8.6,
      14068,
      24779,
      12518,
      3818,
      8.98,
      42504,
      5.78,
      734796,
      163,
      314,
      28.4,
      19.6,
      34.5,
      17.4,
      3382,
      9.05,
      37350,
      6.31,
      592037,
      133,
      255,
      20384,
      436,
      8.46,
      5154,
      3.61,
      142759,
      30,
      59,
      0,
      0,
      4,
      7664.91084094527,
      "",
      0.66940979184583,
    ],
    Array [
      5,
      "13045",
      2017,
      1132.54,
      19466,
      17.2,
      51388,
      22.9408589419196,
      19.7658476256551,
      8.93774407996036,
      9581.46,
      0.99,
      119.47,
      0.1909,
      73.6,
      0.3812,
      9835.21,
      10537.8,
      114469645.79,
      117501215.58,
      125895065.11,
      1546,
      54893,
      828,
      1152,
      52158,
      4120,
      112,
      3.9718604496,
      394,
      940,
      1335,
      117458,
      3.9507212861,
      29207,
      1,
      2735,
      5,
      288.42192007,
      17587,
      3451,
      49.282706201,
      7.1,
      1,
      3.4,
      8,
      13.2,
      9.9,
      14068,
      24779,
      12518,
      4077,
      9.68,
      42099,
      5.74,
      733534,
      149,
      323,
      28.4,
      19.6,
      34.5,
      17.4,
      3536,
      9.69,
      36508,
      6.14,
      594165,
      123,
      259,
      20384,
      541,
      9.68,
      5591,
      4.01,
      139369,
      26,
      64,
      0,
      0,
      4,
      8454.9108694847,
      "",
      0.88022808780534,
    ],
    Array [
      6,
      "21013",
      2013,
      268.76,
      9608,
      35.7,
      25761,
      21.8949073157273,
      8.91068812538304,
      8.61804202425425,
      8433.08,
      1.03,
      55.13,
      0.2403,
      11.02,
      0.1666,
      8911.64,
      9024.55,
      46491545.59,
      49129877.14,
      49752323.3,
      377,
      9866,
      -270,
      362,
      8552,
      952,
      5,
      6.2,
      15,
      -265,
      -249,
      28047,
      7.2,
      7163,
      1,
      1314,
      13.3,
      129.39898792,
      4669,
      1250,
      37.037554097,
      -9.6,
      0.2,
      0.5,
      -9.4,
      13.4,
      12.8,
      1801,
      6945,
      6345,
      918,
      3.02,
      30441,
      8.99,
      338475,
      51,
      81,
      22,
      9.3,
      35.9,
      32.8,
      918,
      3.02,
      30403,
      8.99,
      338242,
      50,
      80,
      4264,
      0,
      0,
      38,
      16.31,
      233,
      1,
      1,
      1,
      1,
      3,
      10173.9849102691,
      "",
      2.92526782557644,
    ],
    Array [
      7,
      "21013",
      2014,
      267.36,
      8955,
      33.5,
      24868,
      22.5495380139909,
      4.18447639805191,
      8.43576598090271,
      8909.4,
      1.05,
      53.75,
      0.2258,
      12.84,
      0.1928,
      9356,
      8889.45,
      47888046.63,
      50288514.04,
      47780778.73,
      326,
      9312,
      -149,
      375,
      8372,
      952,
      1,
      6.1,
      -49,
      -148,
      -200,
      27847,
      7.6,
      7112,
      -3,
      940,
      10.1,
      154.7808811,
      4356,
      1270,
      40.523059618,
      -5.3,
      0,
      -1.8,
      -5.3,
      11.7,
      13.4,
      1801,
      6945,
      6345,
      808,
      2.83,
      28537,
      8.72,
      327379,
      45,
      74,
      22,
      9.3,
      35.9,
      32.8,
      808,
      2.84,
      28467,
      8.7,
      327046,
      44,
      73,
      4264,
      0,
      0,
      70,
      21.02,
      333,
      1,
      1,
      1,
      1,
      3,
      11066.9841446151,
      "",
      2.80760719515471,
    ],
    Array [
      8,
      "21013",
      2015,
      263.07,
      11772,
      44.7,
      23968,
      22.5601322365512,
      -0.54173532927922,
      8.25348993755117,
      8610.03,
      1.05,
      53.26,
      0.1949,
      13.24,
      0.1991,
      9180.01,
      9236.83,
      45856996.67,
      48892740.09,
      49195341.04,
      339,
      8722,
      -408,
      397,
      7974,
      952,
      9,
      6.1,
      -58,
      -399,
      -456,
      27391,
      7.6,
      7032,
      1,
      748,
      8.6,
      163.23600917,
      4126,
      1378,
      40.58589306,
      -14.8,
      0.3,
      -2.1,
      -14.4,
      12.3,
      14.4,
      1801,
      6945,
      6345,
      646,
      2.38,
      27092,
      7.93,
      341644,
      45,
      78,
      22,
      9.3,
      35.9,
      32.8,
      646,
      2.39,
      27009,
      7.91,
      341317,
      44,
      77,
      4264,
      0,
      0,
      83,
      25.38,
      327,
      1,
      1,
      1,
      1,
      3,
      11966.9840465032,
      "",
      2.82858354430684,
    ],
    Array [
      9,
      "21013",
      2016,
      260.85,
      10096,
      38.7,
      26014,
      22.5625094035409,
      -5.26794705661036,
      8.07121389419962,
      9389.59,
      1.03,
      52.27,
      0.2359,
      13.87,
      0.2097,
      9881.67,
      9733.24,
      49079376.64,
      51651482.39,
      50875647.39,
      343,
      8655,
      -109,
      401,
      7855,
      951,
      9,
      5,
      -58,
      -100,
      -160,
      27231,
      5.8,
      6983,
      -2,
      800,
      9.2,
      163.23600917,
      4178,
      949,
      42.317055707,
      -4,
      0.3,
      -2.1,
      -3.7,
      12.6,
      14.7,
      1801,
      6945,
      6345,
      403,
      1.55,
      26024,
      7.37,
      353252,
      46,
      81,
      22,
      9.3,
      35.9,
      32.8,
      403,
      1.55,
      25960,
      7.36,
      352946,
      45,
      80,
      4264,
      0,
      0,
      64,
      20.92,
      306,
      1,
      1,
      1,
      0,
      3,
      9920.98396671519,
      "",
      1.19378868046609,
    ],
    Array [
      10,
      "21013",
      2017,
      258.93,
      9494,
      36.7,
      28150,
      22.5648865705307,
      -9.99415878394151,
      7.88893785084808,
      9341.02,
      1.03,
      51.22,
      0.2027,
      14.66,
      0.2225,
      9843.2,
      9905.71,
      47844710.63,
      50416869.91,
      50737031.09,
      333,
      8669,
      -269,
      406,
      7980,
      930,
      14,
      5.1050939214,
      -73,
      -255,
      -327,
      26904,
      6.3191862686,
      6904,
      1,
      689,
      7.9,
      156.11325307,
      2407,
      757,
      41.367323291,
      -9.9,
      0.5,
      -2.7,
      -9.4,
      12.3,
      15,
      1801,
      6945,
      6345,
      286,
      1.24,
      23141,
      6.93,
      333890,
      45,
      78,
      22,
      9.3,
      35.9,
      32.8,
      286,
      1.24,
      23091,
      6.92,
      333667,
      44,
      77,
      4264,
      0,
      0,
      50,
      22.42,
      223,
      1,
      1,
      1,
      0,
      3,
      7784.98446215675,
      "",
      1.62559055129157,
    ],
    Array [
      11,
      "28105",
      2013,
      443.28,
      13819,
      31.2,
      33594,
      4.74994290443137,
      19.7622338953913,
      7.88817403752778,
      7835.37,
      0.91,
      50.23,
      0.145,
      7.74,
      0.1335,
      8488.52,
      9729.66,
      39357061.89,
      42637814.49,
      48872064.97,
      566,
      22213,
      -79,
      285,
      20446,
      4819,
      89,
      3.2,
      281,
      10,
      286,
      49121,
      3.4,
      10574,
      -5,
      1767,
      8,
      220.07301419,
      7226,
      2316,
      76.347645167,
      -1.6,
      1.8,
      5.7,
      0.2,
      11.6,
      5.8,
      10676,
      5287,
      2989,
      428,
      4,
      10698,
      5.95,
      179764,
      54,
      86,
      24.4,
      42.6,
      21.1,
      11.9,
      428,
      4,
      10698,
      5.95,
      179764,
      54,
      86,
      6118,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      2,
      19265.8999453627,
      "",
      2.99274761590867,
    ],
    Array [
      12,
      "28105",
      2014,
      445.38,
      13295,
      29.9,
      34429,
      5.79849406075663,
      20.1754510157623,
      8.19723755207725,
      8009.09,
      0.9,
      53.57,
      0.1362,
      5.94,
      0.0998,
      8643.26,
      9798.21,
      42904698.29,
      46301969.4,
      52489012.37,
      565,
      22120,
      -436,
      281,
      20537,
      4694,
      106,
      3.3,
      284,
      -330,
      -40,
      49081,
      3.5,
      10649,
      6,
      1583,
      7.2,
      201.31968276,
      8165,
      1949,
      77.284252042,
      -8.9,
      2.2,
      5.8,
      -6.7,
      11.5,
      5.7,
      10676,
      5287,
      2989,
      668,
      5.41,
      12349,
      6.45,
      191403,
      52,
      81,
      24.4,
      42.6,
      21.1,
      11.9,
      668,
      5.41,
      12349,
      6.45,
      191403,
      52,
      81,
      6118,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      2,
      18430.9002535688,
      "",
      2.80897364923683,
    ],
    Array [
      13,
      "28105",
      2015,
      450.42,
      12193,
      27.1,
      38011,
      4.78649293943756,
      20.5886681361333,
      8.50630106662671,
      8745.59,
      0.92,
      54.34,
      0.1509,
      6.1,
      0.1009,
      9451.61,
      10514.9,
      47523559.8,
      51360021.68,
      57137991.4,
      553,
      22520,
      52,
      311,
      21146,
      4637,
      144,
      3.3,
      242,
      196,
      435,
      49516,
      3.5,
      10766,
      -3,
      1374,
      6.1,
      181.11011076,
      8032,
      1779,
      74.939624745,
      1.1,
      2.9,
      4.9,
      4,
      11.2,
      6.3,
      10676,
      5287,
      2989,
      709,
      5.46,
      12980,
      6.71,
      193470,
      53,
      79,
      24.4,
      42.6,
      21.1,
      11.9,
      709,
      5.46,
      12980,
      6.71,
      193470,
      53,
      79,
      6118,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      2,
      14848.9025312097,
      "",
      2.49994427861556,
    ],
    Array [
      14,
      "28105",
      2016,
      450.55,
      12741,
      28.3,
      36105,
      5.04418212234139,
      21.0018852565043,
      8.81536458117618,
      8780.73,
      0.93,
      56.09,
      0.116,
      6.11,
      0.0982,
      9483.5,
      10640.5,
      49251121.95,
      53192933.26,
      59682540.78,
      565,
      23087,
      -237,
      331,
      21838,
      4638,
      18,
      4.1,
      234,
      -219,
      16,
      49532,
      4.1,
      10878,
      1,
      1249,
      5.4,
      181.11011076,
      7920,
      1624,
      75.124103696,
      -4.8,
      0.4,
      4.7,
      -4.4,
      11.4,
      6.7,
      10676,
      5287,
      2989,
      735,
      5.36,
      13722,
      6.45,
      212764,
      54,
      90,
      24.4,
      42.6,
      21.1,
      11.9,
      735,
      5.36,
      13722,
      6.45,
      212764,
      54,
      90,
      6118,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      2,
      16754.9010867623,
      "",
      2.66095654693977,
    ],
    Array [
      15,
      "28105",
      2017,
      450.43,
      11489,
      25.5,
      39387,
      5.30187130524523,
      21.4151023768753,
      9.12442809572565,
      9158.27,
      0.93,
      57.51,
      0.1502,
      6.57,
      0.1025,
      9931.96,
      11404.29,
      52669190.98,
      57118691.97,
      65586048.31,
      560,
      22204,
      -152,
      311,
      21093,
      4575,
      47,
      4.4710550713,
      249,
      -105,
      143,
      49675,
      4.6095870227,
      10780,
      -1,
      1111,
      5,
      158.08033724,
      7198,
      1411,
      75.871985158,
      -3.1,
      0.9,
      5,
      -2.1,
      11.3,
      6.3,
      10676,
      5287,
      2989,
      645,
      4.59,
      14055,
      6.89,
      204113,
      56,
      92,
      24.4,
      42.6,
      21.1,
      11.9,
      645,
      4.59,
      14055,
      6.89,
      204113,
      56,
      92,
      6118,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      2,
      13472.9037781532,
      "",
      2.7601089471996,
    ],
    Array [
      16,
      "37021",
      2013,
      2406.97,
      37794,
      15.7,
      45738,
      15.4689404726028,
      11.0171656631273,
      6.36,
      7423.98,
      0.87,
      395.72,
      0.1376,
      95.64,
      0.1946,
      7812.2,
      9432.61,
      293781847.44,
      309144487.59,
      373267092.33,
      2652,
      127657,
      2758,
      2447,
      120025,
      7687,
      144,
      3.5,
      205,
      2902,
      3166,
      246823,
      3.4,
      63476,
      59,
      7632,
      6,
      292.77459794,
      40791,
      10345,
      67.554666331,
      11.2,
      0.6,
      0.8,
      11.8,
      10.8,
      10,
      70716,
      43888,
      16832,
      15817,
      11.96,
      132201,
      6.7,
      1972925,
      745,
      1351,
      28.4,
      38.5,
      23.9,
      9.2,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      52119,
      15817,
      11.96,
      132201,
      6.7,
      1972925,
      745,
      1351,
      0,
      0,
      2,
      7121.90613803441,
      "",
      1.8560710244944,
    ],
    Array [
      17,
      "37021",
      2014,
      2434.53,
      33936,
      13.9,
      47296,
      17.9257274081464,
      10.7204072199179,
      6.3890909090909,
      7617.72,
      0.89,
      374.28,
      0.142,
      133.82,
      0.2634,
      7897.88,
      9183.62,
      285115956.89,
      295601855.64,
      343724571.45,
      2587,
      127701,
      1993,
      2445,
      121692,
      7769,
      125,
      3.8,
      142,
      2118,
      2299,
      249122,
      3.3,
      63849,
      39,
      6009,
      4.7,
      259.19807864,
      39692,
      9585,
      68.72621341,
      8,
      0.5,
      0.6,
      8.5,
      10.4,
      9.9,
      70716,
      43888,
      16832,
      19893,
      12.85,
      154839,
      6.38,
      2426481,
      805,
      1465,
      28.4,
      38.5,
      23.9,
      9.2,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      52119,
      19893,
      12.85,
      154839,
      6.38,
      2426481,
      805,
      1465,
      0,
      0,
      2,
      5563.91040062493,
      "",
      1.68601453378711,
    ],
    Array [
      18,
      "37021",
      2015,
      2459.6,
      37433,
      15.2,
      45094,
      17.6352460299645,
      10.4236487767085,
      6.41818181818181,
      7551.21,
      0.9,
      381.09,
      0.1465,
      142.88,
      0.2727,
      7918.38,
      9407.44,
      287769062.05,
      301761589.99,
      358508238.68,
      2644,
      130462,
      2584,
      2576,
      124771,
      7881,
      171,
      3.8,
      68,
      2755,
      2851,
      251973,
      3.3,
      64481,
      28,
      5691,
      4.4,
      251.35904414,
      40505,
      7809,
      68.70551015,
      10.3,
      0.7,
      0.3,
      11,
      10.6,
      10.3,
      70716,
      43888,
      16832,
      19235,
      12.67,
      151765,
      6.03,
      2515369,
      858,
      1529,
      28.4,
      38.5,
      23.9,
      9.2,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      52119,
      19235,
      12.67,
      151765,
      6.03,
      2515369,
      858,
      1529,
      0,
      0,
      2,
      7765.90464675524,
      "",
      1.73547129411506,
    ],
    Array [
      19,
      "37021",
      2016,
      2487.11,
      33631,
      13.5,
      50538,
      18.3388244626892,
      10.1268903334991,
      6.44727272727272,
      7472.37,
      0.9,
      390.23,
      0.1379,
      145.78,
      0.272,
      7796.81,
      9139.93,
      291594150.36,
      304255066.69,
      356667663.92,
      2610,
      134377,
      2856,
      2627,
      129183,
      7681,
      163,
      3.6,
      -17,
      3019,
      3015,
      254988,
      3.7,
      65331,
      13,
      5194,
      3.9,
      251.35904414,
      40002,
      5805,
      69.890251182,
      11.3,
      0.6,
      -0.1,
      11.9,
      10.3,
      10.4,
      70716,
      43888,
      16832,
      19920,
      12.98,
      153418,
      5.79,
      2651654,
      882,
      1626,
      28.4,
      38.5,
      23.9,
      9.2,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      52119,
      19920,
      12.98,
      153418,
      5.79,
      2651654,
      882,
      1626,
      0,
      0,
      2,
      2321.93880539799,
      "",
      1.72977908321703,
    ],
    Array [
      20,
      "37021",
      2017,
      2504.08,
      28715,
      11.5,
      50271,
      19.0424028954139,
      9.83013189028971,
      6.47636363636363,
      7746.36,
      0.89,
      384.46,
      0.1452,
      163.54,
      0.2984,
      8075.69,
      9620.36,
      297816616.83,
      310478037.32,
      369864355.52,
      2468,
      136667,
      2162,
      2624,
      131999,
      7683,
      184,
      3.8274501436,
      -156,
      2346,
      2197,
      257185,
      3.8387103613,
      66014,
      7,
      4668,
      3.4,
      242.96161693,
      30085,
      5688,
      70.319932136,
      8.4,
      0.7,
      -0.6,
      9.2,
      9.6,
      10.2,
      70716,
      43888,
      16832,
      18722,
      13.05,
      143500,
      5.28,
      2715773,
      861,
      1663,
      28.4,
      38.5,
      23.9,
      9.2,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      52119,
      18722,
      13.05,
      143500,
      5.28,
      2715773,
      861,
      1663,
      0,
      0,
      2,
      2588.93396513826,
      "",
      1.82061613729616,
    ],
  ],
  "schema": Array [
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "_Index_",
      "type": "int",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "$CHAR5.",
      "label": "FIPS",
      "name": "FIPS",
      "type": "string",
      "width": 5,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "year_num",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "All_Ages_in_Poverty_Universe",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "All_ages_in_Poverty_Count_Est",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "SDOH9 All Ages in Poverty Rate",
      "name": "SDOH_All_ages_in_Poverty_Rate",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "SDOH4 Median Household Income",
      "name": "SDOH_Median_Household_Income",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "MM1 Opioids Est Age Adjusted",
      "name": "Opioids_Estimated_Age_adj",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "MM2 Drug Poisoning Deaths Per 100,000",
      "name": "Drug_poisoning_deaths",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "SDOH1 Physically Mentally Unhealthy",
      "name": "SDOH_PMU",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "HCOSTS1 Actual Per Capita Costs",
      "name": "Actual_Per_Capita_Costs2",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "HUTIL2 Average HCC Score",
      "name": "Average_HCC_Score2",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "FFS_Beneficiaries",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "HUTIL1 Hospital Readmission Rate",
      "name": "Hospital_Readmission_Rate2",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "MA_Beneficiaries",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "HUTIL3 MA Participation Rate",
      "name": "MA_Participation_Rate2",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "HCOSTS2 Standardized_Per_Capita_Costs",
      "name": "Standardized_Per_Capita_Costs2",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "HCOSTS3 Standardized_Risk_Adjusted_Pe",
      "name": "Standardized_Risk_Adjusted_Pe2",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "HCOSTS4 Total_Actual_Costs",
      "name": "Total_Actual_Costs2",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "HCOSTS5 Total_Standardized_Costs",
      "name": "Total_Standardized_Costs2",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "HCOSTS6 Total_Standardized_Risk_Adjus",
      "name": "Total_Standardized_Risk_Adjus2",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Births_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Civilian_labor_force_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "DOMESTIC_MIG_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Deaths_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Employed_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "GQ_ESTIMATES_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "INTERNATIONAL_MIG_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "SDOH7 Mentally Unhealthy Days",
      "name": "SDOH_Mentally_Unhealthy_Days",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "NATURAL_INC_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "NET_MIG_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "N_POP_CHG_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "POP_ESTIMATE_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "SDOH6 Physically Unhealthy Days",
      "name": "SDOH_Physically_Unhealthy_Days_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Population",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "RESIDUAL_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "SDOH5 Unemployed",
      "name": "SDOH_Unemployed_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "SDOH3 Unemployment Rate",
      "name": "SDOH_Unemployment_Rate",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "SDOH10 Violent Crime Rate",
      "name": "SDOH_Violent_Crime_Rate",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "HUTIL4 Percent Uninsured",
      "name": "__Uninsured2",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "HUTIL5 Percent Unemployed",
      "name": "__unemployed2",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "SDOH8 College Education Rate",
      "name": "SDOH_College_Education",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "R_DOMESTIC_MIG_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "R_INTERNATIONAL_MIG_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "R_NATURAL_INC_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "R_NET_MIG_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "R_birth_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "R_death_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "SDOH11 Bachelor_s_degree_or_higher_2",
      "name": "Bachelor_s_degree_or_higher_2",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "High_school_diploma_only_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Less_than_a_high_school_dip_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Long_Acting_Opioid_Claims",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "HUTIL6 Long Acting Opioid Prescribing",
      "name": "Long_Acting_Opioid_Pres2",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Opioid_Claims",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "HUTIL7 Opioid Prescribing Rate",
      "name": "Opioid_Prescribing_Rate2",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Overall_Claims",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Part_D_Opioid_Prescribers",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Part_D_Prescribers",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "Percent_of_adults_completin_2",
      "name": "Percent_of_adults_completin_2",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "SDOH2 Education1",
      "name": "SDOH_Per_Adults_Bachelors",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Percent_of_adults_with_a_hi_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Percent_of_adults_with_less_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Rural_Long_Acting_Opioid_Clai",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Rural_Long_Acting_Opioid_Pres",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Rural_Opioid_Claims",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "HUTIL8 Rural Opioid Prescribing Rate",
      "name": "Rural_Opioid_Prescribing_Rate2",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Rural_Overall_Claims",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Rural_Part_D_Opioid_Prescribe",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Rural_Part_D_Prescribers",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Some_college_or_associate_s_",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Urban_Long_Acting_Opioid_Clai",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "HUTIL9 Urban_Long_Acting_Opioid_Pres2",
      "name": "Urban_Long_Acting_Opioid_Pres2",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Urban_Opioid_Claims",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "HUTIL10 Urban Opioid Prescribing Rate",
      "name": "Urban_Opioid_Prescribing_Rate2",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Urban_Overall_Claims",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Urban_Part_D_Opioid_Prescribe",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "Urban_Part_D_Prescribers",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "target_OPR_20",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "target_OPR_10",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "_CLUSTER_ID__439",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "_DISTANCE__439",
      "type": "double",
      "width": 8,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "_WARN__439",
      "type": "string",
      "width": 4,
    },
    Object {
      "attributes": Object {},
      "format": "",
      "label": "",
      "name": "_STANDARDIZED_DISTANCE__439",
      "type": "double",
      "width": 8,
    },
  ],
  "title": "Selected Rows from Table CLUSTER_TEST2JEST",
}
`;

exports[`upload a score hdat and score it using restaflib 1`] = `"done"`;

exports[`upload astore using restaflib 1`] = `
Array [
  Object {
    "FormatName": "         ",
    "Length": 8,
    "Name": "type_n        ",
    "RawType": "Num",
    "Role": "Input",
    "Type": "Interval      ",
  },
  Object {
    "FormatName": "         ",
    "Length": 8,
    "Name": "amount        ",
    "RawType": "Num",
    "Role": "Input",
    "Type": "Interval      ",
  },
  Object {
    "FormatName": "         ",
    "Length": 8,
    "Name": "newbalanceDest",
    "RawType": "Num",
    "Role": "Input",
    "Type": "Interval      ",
  },
  Object {
    "FormatName": "         ",
    "Length": 8,
    "Name": "newbalanceOrig",
    "RawType": "Num",
    "Role": "Input",
    "Type": "Interval      ",
  },
  Object {
    "FormatName": "         ",
    "Length": 8,
    "Name": "oldbalanceDest",
    "RawType": "Num",
    "Role": "Input",
    "Type": "Interval      ",
  },
  Object {
    "FormatName": "         ",
    "Length": 8,
    "Name": "oldbalanceOrg ",
    "RawType": "Num",
    "Role": "Input",
    "Type": "Interval      ",
  },
  Object {
    "FormatName": "         ",
    "Length": 8,
    "Name": "isFraud       ",
    "RawType": "Num",
    "Role": "Id   ",
    "Type": "              ",
  },
]
`;
